@@ -1,6 +1,6 @@
 #!perl -Tw
 
-use Test::More tests => 28;
+use Test::More tests => 29;
 
 use Carp::Assert::More;
 
